// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@style: service methods checks * styling * custom appearance * stateless 1`] = `
Object {
  "backgroundColor": "transparent",
  "borderColor": "#2196F3",
  "borderRadius": 6,
  "borderWidth": 2,
  "iconHeight": 13,
  "iconMarginHorizontal": 4,
  "iconTintColor": "#2196F3",
  "iconWidth": 13,
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "textColor": "#2196F3",
  "textFontSize": 12,
  "textFontWeight": 800,
  "textMarginHorizontal": 4,
}
`;

exports[`@style: service methods checks * styling * custom appearance * with state * explicit (should apply own) 1`] = `
Object {
  "backgroundColor": "transparent",
  "borderColor": "#1E88E5",
  "borderRadius": 6,
  "borderWidth": 2,
  "iconHeight": 13,
  "iconMarginHorizontal": 4,
  "iconTintColor": "#1E88E5",
  "iconWidth": 13,
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "textColor": "#1E88E5",
  "textFontSize": 12,
  "textFontWeight": 800,
  "textMarginHorizontal": 4,
}
`;

exports[`@style: service methods checks * styling * custom appearance * with state * implicit (should apply from default appearance) 1`] = `
Object {
  "backgroundColor": "transparent",
  "borderColor": "#2196F3",
  "borderRadius": 6,
  "borderWidth": 2,
  "iconHeight": 13,
  "iconMarginHorizontal": 4,
  "iconTintColor": "#2196F3",
  "iconWidth": 13,
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "textColor": "#2196F3",
  "textFontSize": 12,
  "textFontWeight": 800,
  "textMarginHorizontal": 4,
}
`;

exports[`@style: service methods checks * styling * custom appearance * with variant * explicit (should apply own) 1`] = `
Object {
  "backgroundColor": "transparent",
  "borderColor": "#4CAF50",
  "borderRadius": 6,
  "borderWidth": 2,
  "iconHeight": 13,
  "iconMarginHorizontal": 4,
  "iconTintColor": "#4CAF50",
  "iconWidth": 13,
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "textColor": "#4CAF50",
  "textFontSize": 12,
  "textFontWeight": 800,
  "textMarginHorizontal": 4,
}
`;

exports[`@style: service methods checks * styling * custom appearance * with variant * implicit (should apply from default appearance) 1`] = `
Object {
  "backgroundColor": "transparent",
  "borderColor": "#2196F3",
  "borderRadius": 6,
  "borderWidth": 2,
  "iconHeight": 14,
  "iconMarginHorizontal": 4.5,
  "iconTintColor": "#2196F3",
  "iconWidth": 14,
  "minHeight": 30,
  "minWidth": 30,
  "padding": 4.5,
  "textColor": "#2196F3",
  "textFontSize": 13,
  "textFontWeight": 800,
  "textMarginHorizontal": 4.5,
}
`;

exports[`@style: service methods checks * styling * default appearance * stateless 1`] = `
Object {
  "backgroundColor": "#2196F3",
  "borderRadius": 6,
  "iconHeight": 13,
  "iconMarginHorizontal": 4,
  "iconTintColor": "#ffffff",
  "iconWidth": 13,
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "textColor": "text-primary-inverse",
  "textFontSize": 12,
  "textFontWeight": 800,
  "textMarginHorizontal": 4,
}
`;

exports[`@style: service methods checks * styling * default appearance * with state * multiple 1`] = `
Object {
  "backgroundColor": "#1E88E5",
  "borderRadius": 6,
  "iconHeight": 13,
  "iconMarginHorizontal": 4,
  "iconTintColor": "#ffffff",
  "iconWidth": 13,
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "textColor": "text-primary-inverse",
  "textFontSize": 12,
  "textFontWeight": 800,
  "textMarginHorizontal": 4,
}
`;

exports[`@style: service methods checks * styling * default appearance * with state * single 1`] = `
Object {
  "backgroundColor": "#1E88E5",
  "borderRadius": 6,
  "iconHeight": 13,
  "iconMarginHorizontal": 4,
  "iconTintColor": "#ffffff",
  "iconWidth": 13,
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "textColor": "text-primary-inverse",
  "textFontSize": 12,
  "textFontWeight": 800,
  "textMarginHorizontal": 4,
}
`;

exports[`@style: service methods checks * styling * default appearance * with variant * multiple * no state 1`] = `
Object {
  "backgroundColor": "#4CAF50",
  "borderRadius": 6,
  "iconHeight": 14,
  "iconMarginHorizontal": 4.5,
  "iconTintColor": "#ffffff",
  "iconWidth": 14,
  "minHeight": 30,
  "minWidth": 30,
  "padding": 4.5,
  "textColor": "text-primary-inverse",
  "textFontSize": 13,
  "textFontWeight": 800,
  "textMarginHorizontal": 4.5,
}
`;

exports[`@style: service methods checks * styling * default appearance * with variant * multiple * with state * multiple 1`] = `
Object {
  "backgroundColor": "#43A047",
  "borderRadius": 6,
  "iconHeight": 14,
  "iconMarginHorizontal": 4.5,
  "iconTintColor": "#ffffff",
  "iconWidth": 14,
  "minHeight": 30,
  "minWidth": 30,
  "padding": 4.5,
  "textColor": "text-primary-inverse",
  "textFontSize": 13,
  "textFontWeight": 800,
  "textMarginHorizontal": 4.5,
}
`;

exports[`@style: service methods checks * styling * default appearance * with variant * multiple * with state * single 1`] = `
Object {
  "backgroundColor": "#43A047",
  "borderRadius": 6,
  "iconHeight": 14,
  "iconMarginHorizontal": 4.5,
  "iconTintColor": "#ffffff",
  "iconWidth": 14,
  "minHeight": 30,
  "minWidth": 30,
  "padding": 4.5,
  "textColor": "text-primary-inverse",
  "textFontSize": 13,
  "textFontWeight": 800,
  "textMarginHorizontal": 4.5,
}
`;

exports[`@style: service methods checks * styling * default appearance * with variant * single * no state 1`] = `
Object {
  "backgroundColor": "#4CAF50",
  "borderRadius": 6,
  "iconHeight": 13,
  "iconMarginHorizontal": 4,
  "iconTintColor": "#ffffff",
  "iconWidth": 13,
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "textColor": "text-primary-inverse",
  "textFontSize": 12,
  "textFontWeight": 800,
  "textMarginHorizontal": 4,
}
`;

exports[`@style: service methods checks * styling * default appearance * with variant * single * with state * multiple 1`] = `
Object {
  "backgroundColor": "#43A047",
  "borderRadius": 6,
  "iconHeight": 13,
  "iconMarginHorizontal": 4,
  "iconTintColor": "#ffffff",
  "iconWidth": 13,
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "textColor": "text-primary-inverse",
  "textFontSize": 12,
  "textFontWeight": 800,
  "textMarginHorizontal": 4,
}
`;

exports[`@style: service methods checks * styling * default appearance * with variant * single * with state * single explicit (should apply own) 1`] = `
Object {
  "backgroundColor": "#43A047",
  "borderRadius": 6,
  "iconHeight": 13,
  "iconMarginHorizontal": 4,
  "iconTintColor": "#ffffff",
  "iconWidth": 13,
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "textColor": "text-primary-inverse",
  "textFontSize": 12,
  "textFontWeight": 800,
  "textMarginHorizontal": 4,
}
`;

exports[`@style: service methods checks * styling * default appearance * with variant * single * with state * single implicit (should apply from appearance) 1`] = `
Object {
  "backgroundColor": "#43A047",
  "borderRadius": 6,
  "iconHeight": 13,
  "iconMarginHorizontal": 4,
  "iconTintColor": "#ffffff",
  "iconWidth": 13,
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "textColor": "text-primary-inverse",
  "textFontSize": 12,
  "textFontWeight": 800,
  "textMarginHorizontal": 4,
}
`;

exports[`@style: service methods checks * styling * undefined appearance * stateless (should apply default appearance) 1`] = `
Object {
  "backgroundColor": "#2196F3",
  "borderRadius": 6,
  "iconHeight": 13,
  "iconMarginHorizontal": 4,
  "iconTintColor": "#ffffff",
  "iconWidth": 13,
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "textColor": "text-primary-inverse",
  "textFontSize": 12,
  "textFontWeight": 800,
  "textMarginHorizontal": 4,
}
`;
